# L4AI

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.sh
L4AI/: CMakeLists.txt
L4AI/inc/: Calculator.h  Calculator.hpp  L4AI_global.h  algorithm.h  calculator.h  calculator.hpp  configurable.h  convolutionperceptron.h  flatperceptron.h  instance.h  instance.hpp  perceptron.h  perceptroncalculator.hpp  perceptronexecutorbase.h  perceptroninstance.h  perceptroninstance.hpp  perceptrontrainer.hpp  pipe.h  pipeline.h  pipelinecalculator.hpp  pipelineinstance.h  pipelineinstance.hpp  pipelinetrainer.hpp  smart_from_json.h  smart_objects.h  smart_to_json.h  trainer.h  trainer.hpp
L4AI/src/: algorithm.cpp  calculator.cpp  configurable.cpp  convolutionperceptron.cpp  flatperceptron.cpp  instance.cpp  perceptron.cpp  perceptroninstance.cpp  pipe.cpp  pipeline.cpp  pipelineinstance.cpp  smart_from_json.cpp  smart_objects.cpp  smart_to_json.cpp  trainer.cpp
L4AIShell/: CMakeLists.txt
L4AIShell/src/: main.cpp
Tests/: CMakeLists.txt
Tests/inc/: mytests.h  options.h  testbase.h  testsutils.h
Tests/src/: main.cpp  mytests.cpp  perceptrontests.cpp  pipetests.cpp  smarttests.cpp  testbase.cpp  testsutils.cpp
